--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.servlet.context-path=/order
 #Êı¾İ¿âÅäÖÃ
 spring.datasource.url=jdbc:mysql://localhost/order?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
